--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
 
+    </head>
+    <body>
+        
         <!-- Web Page Heading --> 
         <h1>Ahmet Faruk ÇULLU</h1>
         <!-- Web Page Heading End -->
@@ -7,8 +13,55 @@
         <h2>Hakkımda</h2>
         <!-- About Section Heading End -->
 
-        <!-- Paragraphs -->
+        <!-- Paragraph -->
         <p>Herkese merhaba!</p>
         <p>Ben Ahmet Faruk Çullu. 1992 doğumluyum ve Ankara'da yaşıyorum. 2018 yılından beri kendi çabalarımla yazılım dünyasında kendimi geliştirmeye çalışıyorum.</p>
         <p>Front-End için mükemmel bir fırsat olrak gördüğüm ve Kodluyoruz.org, Patika.dev ve Microsoft işbirliği ile geliştirilen 'Yazılıma İlk Adım: Front-End Geliştirme' programı ile birlikte, kendimi bu alanda geliştirme fırsatı yakaladığım için çok mutluyum.</p>
-        <!-- Paragraphs End -->
+        <!-- Paragraph End -->
+        <br>
+        <p>Şimdi biraz daha <strong>derinlere</strong> inelim</p>
+        <br>
+        <h3>En Sevdiğim Filmler</h3>
+        <br>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0120737/">Yüzüklerin Efendisi: Yüzük Kardeşliği</a></li>
+            <li><a href="https://www.imdb.com/title/tt0926084/?ref_=nv_sr_srsg_3_tt_8_nm_0_q_%25C3%25B6l%25C3%25BCm%2520yad">Harry Potter ve Ölüm Yadigarları: Part 1</a></li>
+            <li><a href="https://www.imdb.com/title/tt0118799/?ref_=chttp_t_27">Hayat Güzeldir</a></li>
+        </ul>
+        <br>
+        <hr>
+        <br>
+        <h3>En Sevdiğim Diziler</h3>
+        <br>
+        <ol>
+            <li><a href="https://www.imdb.com/title/tt0903747/?ref_=chttvtp_t_1">Breaking Bad</a></li>
+            <li><a href="https://www.imdb.com/title/tt0417299/?ref_=chttvtp_t_7">Avatar: Son Hava Bükücü</a></li>
+            <li><a href="https://www.imdb.com/title/tt2861424/?ref_=chttvtp_t_15">Rick ve Morty</a></li>
+        </ol>
+        <br>
+        <hr>
+        <br>
+        <h3>En Sevdiğim Kitaplar</h3>
+        <br>
+        <ol>
+            <li><a href="https://www.goodreads.com/book/show/25076027-puslu-k-talar-atlas?from_search=true&from_srp=true&qid=70mGkOVlVH&rank=12">Puslu Kıtalar Atlası</a></li>
+                <ul>
+                    <li><strong>Yazar: </strong><em>İhsan Oktay ANAR</em></li>
+                </ul>
+            <li><a href="https://www.goodreads.com/book/show/50692738-bunu-herkes-bilir?from_search=true&from_srp=true&qid=3WyjIx4DMT&rank=1">Bunu Herkes Bilir: Tarihteki Yanlış Sorulara Doğru Cevaplar</a></li>
+                <ul>
+                    <li><strong>Yazar: </strong><em>Emrah Safa GÜRKAN</em></li>
+                </ul>
+            <li><a href="https://www.goodreads.com/book/show/17832046-karde-imin-hik-yesi?from_search=true&from_srp=true&qid=nngXz7M2jH&rank=1">Kardeşimin Hikâyesi</a></li>
+                <ul>
+                    <li><strong>Yazar: </strong> <em>Zülfü LİVANELİ</em></li>
+                </ul>
+        </ol>
+        <br>
+        <hr>
+        <br>
+        <p>Favorilerimden bazılarını sizlerle paylaşmış oldum. Bundan sonrasında neler eklerim bilmiyorum ama her güzel metin güzel resimleri hak eder diye düşünüyorum:</p>
+        <br>
+        <img width="400" height="400" src="https://m.media-amazon.com/images/M/MV5BMTY1OTE1NDY4NV5BMl5BanBnXkFtZTcwMzkwMjk2Mw@@._V1_UY100_CR25,0,100,100_AL_.jpg" alt="Gandalf The Gray">
+    </body>
+</html>
